--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -1,3 +1,3 @@
 @import './global/typography';
 @import './global/color';
-@import '../../components/components
+@import '../../components/components';
