--- a/src/components/common/button/_button.scss
+++ b/src/components/common/button/_button.scss
@@ -28,8 +28,8 @@
 
 	@if $type==button_dark {
 		background-color: var(--brand-6);
-		color: var(--font-light);
-		border: 1px solid var(--font-accent);
+		color: var(--base-light);
+		border: 1px solid var(--base-main);
 
 		&:hover {
 			background-color: var(--brand-7);
@@ -38,7 +38,7 @@
 
 		&:active {
 			background-color: var(--brand-9);
-			color: var(--font-light);
+			color: var(--base-light);
 			transform: scale(0.97);
 		}
 
@@ -59,8 +59,8 @@
 		}
 
 		&:active {
-			background-color: var(--font-accent);
-			color: var(--font-light);
+			background-color: var(--base-main);
+			color: var(--base-light);
 			transform: scale(0.97);
 		}
 
@@ -119,7 +119,7 @@
 		div {
 			display: inline-block;
 			position: relative;
-			color: var(--font-accent);
+			color: var(--base-main);
 			text-decoration: none;
 
 			&:after {
@@ -138,7 +138,7 @@
 		}
 	} @else if $type==button_information {
 		background-color: var(--information-6);
-		color: var(--font-light);
+		color: var(--base-light);
 		border: 1px solid var(--information-6);
 
 		&:hover {
@@ -148,7 +148,7 @@
 
 		&:active {
 			background-color: var(--information-8);
-			color: var(--font-light);
+			color: var(--base-light);
 			transform: scale(0.97);
 		}
 
@@ -159,7 +159,7 @@
 		}
 	} @else if $type==button_success {
 		background-color: var(--success-6);
-		color: var(--font-light);
+		color: var(--base-light);
 		border: 1px solid var(--success-6);
 
 		&:hover {
@@ -169,7 +169,7 @@
 
 		&:active {
 			background-color: var(--success-8);
-			color: var(--font-light);
+			color: var(--base-light);
 			transform: scale(0.97);
 		}
 
@@ -180,7 +180,7 @@
 		}
 	} @else if $type==button_warning {
 		background-color: var(--warning-6);
-		color: var(--font-light);
+		color: var(--base-light);
 		border: 1px solid var(--warning-6);
 
 		&:hover {
@@ -190,7 +190,7 @@
 
 		&:active {
 			background-color: var(--warning-8);
-			color: var(--font-light);
+			color: var(--base-light);
 			transform: scale(0.97);
 		}
 
@@ -201,7 +201,7 @@
 		}
 	} @else if $type==button_error {
 		background-color: var(--error-6);
-		color: var(--font-light);
+		color: var(--base-light);
 		border: 1px solid var(--error-6);
 
 		&:hover {
@@ -211,7 +211,7 @@
 
 		&:active {
 			background-color: var(--error-8);
-			color: var(--font-light);
+			color: var(--base-light);
 			transform: scale(0.97);
 		}
 
@@ -295,12 +295,12 @@
 
 //   @if $type==button_dark {
 //     background-color: var(--brand-6);
-//     color           : var(--font-accent);
+//     color           : var(--base-main);
 //     border          : 1px solid transparent;
 
 //     &:active {
 //       background-color: var(--brand-9);
-//       color           : var(--font-light);
+//       color           : var(--base-light);
 //       transform       : scale(0.97);
 //     }
 
@@ -314,13 +314,13 @@
 //   }
 
 //   @else if $type==button_light {
-//     background-color: var(--font-light);
-//     color           : var(--font-accent);
-//     border          : 1px solid var(--font-accent);
+//     background-color: var(--base-light);
+//     color           : var(--base-main);
+//     border          : 1px solid var(--base-main);
 
 //     &:active {
 //       background-color: var(--brand-6);
-//       color           : var(--font-light);
+//       color           : var(--base-light);
 //       transform       : scale(0.97);
 //     }
 
@@ -387,7 +387,7 @@
 //     div {
 //       display        : inline-block;
 //       position       : relative;
-//       color          : var(--font-accent);
+//       color          : var(--base-main);
 //       text-decoration: none;
 
 //       &:after {
