--- a/src/components/common/button/_button.scss
+++ b/src/components/common/button/_button.scss
@@ -6,7 +6,7 @@
 	min-height: 2.5rem;
 	cursor: pointer;
 	user-select: none;
-	border-radius: 0.4rem;
+	border-radius: var(--border-radius);
 	outline: none;
 	align-items: center;
 	position: relative;
