--- a/src/components/common/input/_input.scss
+++ b/src/components/common/input/_input.scss
@@ -1,8 +1,7 @@
 @mixin status($type) {
   @if $type==error {
     >span {
-      border  : 1px solid var(--error-6);
-      position: relative;
+      border: 1px solid var(--error-6);
 
       input::placeholder {
         color: var(--error-4);
@@ -22,8 +21,10 @@
 }
 
 .input {
-  position  : relative;
-  margin-top: 0.5rem;
+  position      : relative;
+  margin-top    : 0.5rem;
+  display       : flex;
+  flex-direction: column;
 
   &__label {
     position: absolute;
@@ -93,6 +94,7 @@
           color     : var(--error-6);
           text-align: center;
           font-size : small;
+          min-height: 0.9rem;
         }
       }
     }
