fix(auth): verify validation in component auth

--- a/src/components/MessageList/_messageList.scss
+++ b/src/components/MessageList/_messageList.scss
@@ -20,6 +20,7 @@
 		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 		padding: 10px;
 		margin-bottom: 10px;
+		white-space: pre-line;
 		transition:
 			opacity 0.3s ease,
 			transform 0.3s ease;
