--- a/src/components/layout/navbar/_navbar.scss
+++ b/src/components/layout/navbar/_navbar.scss
@@ -1,9 +1,11 @@
-@import '../sidebar/sidebar';
+@import './sidebar/sidebar';
+@import './login/login';
 
 .navbar {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	color: var(--base-light);
 
 	.navbar__logo {
 		display: block;
